<resources>
    <string name="app_name">Nimantran</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logout">Logout</string>
    <string name="title_activity_guest_response">GuestResponseActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <string name="privacy_policies">Nimantran application has been developed to help people manage and invite their guests in any event in a more easy and secure way. This page is used to inform visitors regarding our policies with the collection, use, and disclosure of Personal Information if anyone decided to use our Service. If you choose to use our Service, then you agree to the collection and use of information in relation to this policy. The Personal Information that we collect is used for providing and improving the Service. We will not use or share your information with anyone except as described in this Privacy Policy. The terms used in this Privacy Policy have the same meanings as in our Terms and Conditions, which is accessible at Nimantran unless otherwise defined in this Privacy Policy Information Collection and Use.\nFor a better experience, while using our Service, we may require you to provide us with certain personally identifiable information, including:\n\nLog in with a mobile number for unique identification.\nEnter Name, email, gender which will be used to maintain the profile. The information that we request will be retained by us and used as described in this privacy policy. We value your trust in providing us with your personal information, thus we are striving to use commercially acceptable means of protecting it. But remember that no method of transmission over the internet, or method of electronic storage is 100% secure and reliable, and we cannot guarantee its absolute security.\n\nThese services do not address anyone under the age of 13. We do not knowingly collect personally identifiable information from children under 13. In the case we discover that a child under 13 has provided us with personal information, we immediately delete this from our servers. If you are a parent or guardian and you are aware that your child has provided us with personal information, please contact us so that we will be able to do necessary actions.\n\nChanges to this privacy policy. We may update our Privacy Policy from time to time. Thus, you are advised to review this page periodically for any changes. We will notify you of any changes by posting the new Privacy Policy on this page. This policy is in effect from 01-March-2023.
</string>
    <string name="permission_required">Please provide permission for the app</string>
    <string name="order_placed">Order Placed</string>
    <string name="order_confirmed">Order Confirmed</string>
    <string name="order_dispatched">Order Dispatched</string>
    <string name="order_delivered">Order Delivered</string>
    <string name="address_not_found">Address Not Found</string>

    <!-- Ish -->
    <string name="pk">pk_test_51MuvvMSFj6CNUSphKlV0Brxd9vz0UYOXdeAP3N70P5qxCsoBIji62SOD4hRs9R2e6aNLLWyOMDv857uAieAZyzYX00lOP8I4Wv</string>
    <string name="api_url">http://192.168.134.180:8000/checkout</string>

    <!-- Zaid Sir   -->
    <!--
    <string name="pk">pk_test_51KuagNSHSR0QAHQZWocM4lGu7ufWGhCB4HRUQJrbB1tk5IJOevnK6x3oLaBAsPoGhYpHqF0uQfbU1g2PKGcyokOo003HNgG17D</string>
    <string name="api_url">http://192.168.18.109:8000/checkout</string>
    -->

</resources>